--- a/guideLine/html/sub/github.html
+++ b/guideLine/html/sub/github.html
@@ -48,39 +48,39 @@
                         <td>현재 나의 위치 확인</td>
                     </tr>
                     <tr>
-                        <th scope="row">$ls</th>
+                        <th>$ls</th>
                         <td>현재 위치에 디렉토리및 파일 확인</td>
                     </tr>
                     <tr>
-                        <th scope="row">$cd</th>
+                        <th>$cd</th>
                         <td>디렉토리 선택</td>
                     </tr>
                     <tr>
-                        <th scope="row">$cd ..</th>
+                        <th>$cd ..</th>
                         <td>상위 디렉토리 선택</td>
                     </tr>
                     <tr>
-                        <th scope="row">$git init</th>
+                        <th>$git init</th>
                         <td>git으로 버전관리 할 프로젝트 선택(git 초기화)</td>
                     </tr>
                     <tr>
-                        <th scope="row">$ls -al</th>
+                        <th>$ls -al</th>
                         <td>현재 위치에 디렉토리및 파일 확인(숨은 디렉토리까지)</td>
                     </tr>
                     <tr>
-                        <th scope="row">$git add [파일명]</th>
+                        <th>$git add [파일명]</th>
                         <td>"commit" 할 파일 선택</td>
                     </tr>
                     <tr>
-                        <th scope="row">$ git add .</th>
+                        <th>$ git add .</th>
                         <td>"commit" 할 파일 전체 선택</td>
                     </tr>
                     <tr>
-                        <th scope="row">$git commit -m "[메모]"</th>
+                        <th>$git commit -m "[메모]"</th>
                         <td>선택한 파일들을 한 묶음으로 만들고 메모 입력</td>
                     </tr>
                     <tr>
-                        <th scope="row">$git log</th>
+                        <th>$git log</th>
                         <td>생성한 커밋 보기</td>
                     </tr>
                 </tbody>
@@ -99,11 +99,11 @@
                         <td>$git remote add origin https://github.com/woong2021/project.git</td>
                     </tr>
                     <tr>
-                        <th scope="row">git remote -v</th>
+                        <th>git remote -v</th>
                         <td>원격저장소 연결상태 확인</td>
                     </tr>
                     <tr>
-                        <th scope="row">$git push origin master</th>
+                        <th>$git push origin master</th>
                         <td>gitHub 사이트에 commit 하기</td>
                     </tr>
                 </tbody>
@@ -125,7 +125,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">$rm -rf [디렉토리명]</th>
+                        <th>$rm -rf [디렉토리명]</th>
                         <td>디렉토리 삭제</td>
                     </tr>
                 </tbody>
