--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -102,7 +102,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th>설명</th>
+                            <th scope="row">설명</th>
                             <td>
                                 <figure>
                                 <img src="../../assets/images/sub/sass/img-sass-04.png" alt="구글 개발자도구 셋팅">
@@ -126,7 +126,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th>sass 트리구조</th>
+                            <th scope="row">sass 트리구조</th>
                             <td>
                                 <figure>
                                 <img src="../../assets/images/sub/sass/img-sass-01.png" alt="sass 설명">
@@ -160,7 +160,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th>부모요소</th>
+                            <th scope="row">부모요소</th>
                             <td>
                                 <figure>
                                 <img src="../../assets/images/sub/sass/img-sass-03.png" alt="sass 설명">
@@ -175,6 +175,116 @@
                                     <li>부모요소는 자식요소들을 임포트하여 컴파일 역활만 진행</li>
                                     <li>자식요소는 실제로 css 에 반영할 코드 작성</li>
                                 </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+        </section>
+        <section id="">
+            <h3>Sass 문법</h3>
+            <article>
+                <h4>문법</h4>
+                <table class="default-table">
+                    <caption class="sr-only"> SASS 문법</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">주석</th>
+                            <td>
+                                <ul>
+                                    <li>// Common : CSS로 컴파일 되지 않는 주석</li>
+                                    <li>/* Common */ : CSS로 컴파일 되는 주석</li>
+                                </ul>
+                                <div class="explanation-box-pre">
+                                    <pre>
+                                        // *----------------------------
+                                        //	Contents
+                                        // ----------------------------*
+                                    </pre>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>!global</th>
+                            <td>
+                                <ul>
+                                    <li>변수의 유효범위를 전역으로 설정</li>
+                                    <li class="red">(변수를 따로 파일을 만들어 관리하기 때문에 사용안함)</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>!default</th>
+                            <td>
+                                <ul>
+                                    <li>할당되지 않은 변수의 초깃값을 설정</li>
+                                    <li>할당되어 있는 변수가 있다면 변수가 기존 할당값을 사용</li>
+                                    <li class="red">(예로 $color: orange !default; 가 있고 $ color: red; 변수가 후에 생겼다면 $color: red 를 사용)</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>#{}</th>
+                            <td>문자보간이라 하며 코드의 어디든지 변수 값을 넣을 수 있음</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <article>
+                <h4>내장함수</h4>
+                <table class="default-table">
+                    <caption class="sr-only">내장함수</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">unquite()</th>
+                            <td>
+                                <ul>
+                                    <li>문자에서 따옴표를 제거</li>
+                                    <li>$family: unquote("woong");</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>unitless()</th>
+                            <td>
+                                <ul>
+                                    <li>px등 단위가 있는지 확인</li>
+                                    <li>if(unitless($height), #{$height}px, $height);</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <article>
+                <h4>키워드 인수</h4>
+                <table class="default-table">
+                    <caption class="sr-only">키워드 인수</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">예시</th>
+                            <td>
+                                <div class="explanation-box-pre">
+                                    <pre>
+                                        @mixin border($width: 1px, $color: black){
+                                            border: $width solid $color;
+                                        }
+                                        
+                                        @include border($color: red);
+                                    </pre>
+                                </div>
                             </td>
                         </tr>
                     </tbody>
@@ -202,7 +312,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th>예시</th>
+                            <th scope="row">예시</th>
                             <td>
                                 <pre>
                                     for $i from 1 through 20 {
@@ -217,6 +327,51 @@
                                         }
                                     }
                                 </pre>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+        </section>
+        <section id="">
+            <h3>Sass를 활용한 기능구현</h3>
+            <article>
+                <h4>Count 함수</h4>
+                <table class="default-table">
+                    <caption class="sr-only">Count 함수</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">기능 1</th>
+                            <td>
+                                <ol class="number">
+                                    <li><a href="https://www.heroesbaseball.co.kr/index.do">키움 히어로즈</a></li>
+                                    <li><a href="https://ncdinos.com/homepage.do">엔씨 다이노스</a></li>
+                                    <li><a href="https://www.ktwiz.co.kr/">KT 위즈</a></li>
+                                    <li><a href="http://www.ssglanders.com/main">SSG 랜더스</a></li>
+                                    <li><a href="https://www.samsunglions.com/">삼성 라이온즈</a></li>
+                                    <li><a href="http://www.giantsclub.com/html/">롯데 자이언츠</a></li>
+                                    <li><a href="https://www.lgtwins.com/service/html.ncd?view=/pc_twins/twins_main/twins_main">엘지 트윈스</a></li>
+                                    <li><a href="https://www.doosanbears.com/">두산 베어스</a></li>
+                                    <li><a href="https://www.hanwhaeagles.co.kr/index.do">한화 이글스</a></li>
+                                    <li><a href="https://tigers.co.kr/">기아 타이거즈</a></li>
+                                </ol>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>기능 2</th>
+                            <td>
+                                <div>
+                                    <input type="text" class="firstnum">-
+                                    <input type="text" class="lastnum">
+                                    <input type="button" class="btn-num" value="조회">
+                                </div>
+                                <ol class="num-list">
+                                    <li style="list-style-type: none">갯수만큼</li>
+                                </ol>
                             </td>
                         </tr>
                     </tbody>
