--- a/guideLine/html/sub/github.html
+++ b/guideLine/html/sub/github.html
@@ -19,17 +19,7 @@
     <header id="header"></header>
 
     <!-- Quick Menu -->
-    <section>
-        <aside class="Quick">
-            <h2>QUICK</h2>
-            <ul>
-                <li><a href="#gitCli">GIT(CLI)</a></li>
-                <li><a href="#remote">저장소에 올리기</a></li>
-                <li><a href="#clone">저장소에서 받아오기</a></li>
-                <li><a href="#Error">Error</a></li>
-            </ul>
-        </aside>
-    </section>
+    <nav id="quick"></nav>
 
     <!-- Main Content -->
     <main id="container">
