--- a/guideLine/html/sub/guideline.html
+++ b/guideLine/html/sub/guideline.html
@@ -19,20 +19,7 @@
     <header id="header"></header>
 
     <!-- Quick Menu -->
-    <section>
-        <aside class="Quick">
-            <h2>QUICK</h2>
-            <ul>
-                <li><a href="#notationHtml">HTML 표기법</a></li>
-                <li><a href="#notationCss">CSS 표기법</a></li>
-                <li><a href="#notationSass">SASS 표기법</a></li>
-                <li><a href="#titleGuidline">제목 가이드</a></li>
-                <li><a href="#bulletGuidline">블릿 가이드</a></li>
-                <li><a href="#buttonGuidline">버튼 가이드</a></li>
-                <li><a href="#tableGuidline">테이블 가이드</a></li>
-            </ul>
-        </aside>
-    </section>
+    <nav id="quick"></nav>
 
     <!-- Main Content -->
     <main id="container">
