--- a/guideLine/html/sub/jquery.html
+++ b/guideLine/html/sub/jquery.html
@@ -23,17 +23,7 @@
     <header id="header"></header>
 
     <!-- Quick Menu -->
-    <section>
-        <aside class="Quick">
-            <h2>QUICK</h2>
-            <ul>
-                <li><a href="#basicTag">기본태그</a></li>
-                <li><a href="#elementMove">클릭시 특정앨리먼트로 이동</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </aside>
-    </section>
+    <nav id="quick"></nav>
 
     <!-- Main Content -->
     <main id="container">
