--- a/guideLine/html/sub/svelte.html
+++ b/guideLine/html/sub/svelte.html
@@ -20,17 +20,7 @@
     <header id="header"></header>
 
     <!-- Quick Menu -->
-    <section>
-        <aside class="Quick">
-            <h2>QUICK</h2>
-            <ul>
-                <li><a href="#svelte">Svelte</a></li>
-                <li><a href="#disadvantages">Svelte 단점</a></li>
-                <li><a href="#command">Svelte 명령어</a></li>
-                <li><a href="#rendering">선언적랜더링</a></li>
-            </ul>
-        </aside>
-    </section>
+    <nav id="quick"></nav>
 
     <!-- Main Content -->
     <main id="container">
