--- a/guideLine/html/sub/htmcss.html
+++ b/guideLine/html/sub/htmcss.html
@@ -19,19 +19,7 @@
     <header id="header"></header>
     
     <!-- Quick Menu -->
-    <section>
-        <aside class="Quick">
-            <h2>QUICK</h2>
-            <ul>
-                <li><a href="#notice">기본</a></li>
-                <li><a href="#zIndex">z-index</a></li>
-                <li><a href="#unit">단위</a></li>
-                <li><a href="#flex">Flex</a></li>
-                <li><a href="#table">Table</a></li>
-                <li><a href="#animation"></a>Animation</li>
-            </ul>
-        </aside>
-    </section>
+    <nav id="quick"></nav>
 
     <!-- Main Content -->
     <main id="container">
