--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -706,7 +706,7 @@
                 </table>
             </section>
             <section>
-                <h3>node.js 명령어(터미널)</h3>
+                <h3>리눅스 명령어(터미널)</h3>
                 <table class="default-table">
                     <caption class="sr-only">node.js 명령어</caption>
                     <colgroup>
@@ -721,6 +721,14 @@
                         <tr>
                             <th>cd</th>
                             <td>파일 선택</td>
+                        </tr>
+                        <tr>
+                            <th>cd ..</th>
+                            <td>한 단계 상위 디렉토리로 이동</td>
+                        </tr>
+                        <tr>
+                            <th>cd /</th>
+                            <td>최상위 디렉토리로 이동</td>
                         </tr>
                         <tr>
                             <th>프로젝트 생성</th>
@@ -1243,8 +1251,26 @@
         </section>
         <section id="highClass" class="tab-content">
             <section>
-                <h3>준비중</h3>
-            </section>
+                <h3>뷰 라우터 (Router)</h3>
+                <p class="notice">CLI 를 이용한 뷰 라우터 방법</p>
+                <article>
+                    <h4>라우터 설치</h4>
+                    <div class="explanation-box">
+                        터미널에 npm i vue-router --save 명령어 입력
+                    </div>
+                    <div class="explanation-box">
+                        <ul>
+                            <li>
+                                <div class="vue-15"></div>
+                                <p>정상적으로 설치되었다면 package-lock.json 파일에서 확인</p>
+                            </li>
+                            <li>
+                                <div class="vue-16"></div>
+                                <p>다음과 같이 "roter" 폴더를 생성하고 index.js 파일을 생성</p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
         </section>
         <section id="applications" class="tab-content">
             <section>
